fix sidebar overflowing

--- a/company/app/assets/_mixin.scss
+++ b/company/app/assets/_mixin.scss
@@ -1,26 +1,24 @@
 @import "colors.scss";
 
 @mixin custom-scrollbar {
-
   &::-webkit-scrollbar {
-    width: 20px;
-    height: 20px;
+    width: 4px;
+    height: 4px;
   }
 
   &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
+    background: white;
   }
 
   &::-webkit-scrollbar-thumb {
-    background: $color-gray-800;
-    border-radius: 10px;
-  }
+    background: $color-gray-300;
 
-  &::-webkit-scrollbar-thumb:hover {
-    background: $color-gray-900;
+    &:hover {
+      background: $color-gray-400;
+    }
   }
+}
 
-  scrollbar-width: thin;
-  scrollbar-color: $color-gray-800 transparent;
+@mixin box-shadow {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
